fix: deck z-index

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -94,7 +94,7 @@
   padding: 16px;
   display: flex;
   cursor: pointer;
-  z-index: 999;
+  z-index: 0;
 }
 
 .leaveSelected {
